--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,8 @@
 ---
-import MySiteLayout from "../layouts/MySiteLayout.astro";
-import GreetingCard from "../components/GreetingCard.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<MySiteLayout title="Home">
-  <GreetingCard />
-  <h1>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, atque.
-  </h1>
-</MySiteLayout>
+<MainLayout title="Home">
+  <h1>Hello Astro</h1>
+  <p>Home page of astro</p>
+</MainLayout>
